# xml-diff

./: .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini
comp_compare/: __main__.py  main.py
comp_compare/huffman/: compressor.py  encoding.py  tree.py  utils.py
comp_compare/lzw/: constants.py  decoding.py  dictionary.py  encoding.py  lzw.py  trie.py
compression_comparison/: __main__.py  main.py
compression_comparison/huffman/: huffman.py
compression_comparison/lzw/: bitio.py  lzw.py  lzw_trie.py
docs/: käyttöohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md  viikko1.md  viikko2.md  viikko3.md  viikko4.md  viikko5.md  viikko6.md
tests/: conftest.py  huffman_compress_decompress_test.py  huffman_performance_test.py  huffman_test.py  lzw_performance_test.py  lzw_test.py  lzw_trie_performance_test.py  test_huffman.py
tests/data/: random_text.txt  shorter_alice.txt  shorter_random_text.txt
tests/performance_tests/: huffman_performance_test.py  lzw_performance_test.py
