[project]
name = "xml-diff"
version = "0.1.0"
description = ""
authors = [{name = "Pauli Karels",email = "pauli.karels@gmail.com"}]
readme = "README.md"
requires-python = "^3.10"
dependencies = []


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.3"

