[project]
name = "compression_comparison"
version = "0.1.0"
description = ""
authors = [{name = "Pauli Karels",email = "pauli.karels@gmail.com"}]
readme = "README.md"
requires-python = "^3.10"
packages = [
    { include = "compression_comparison" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.3"
pytest = "^8.3.4"
coverage = "^7.6.10"
pytest-benchmark = "^5.1.0"

[tool.poetry.dependencies]
bitstring = ">=4.3.0,<5.0.0"
numpy = "^2.2.2"
typer = "^0.15.1"
pygal = "^3.0.5"
